feat: update favorite check to return place
